kuber/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ration-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ration-frontend
  template:
    metadata:
      labels:
        app: ration-frontend
    spec:
      containers:
        - name: ration-frontend
          image: candycandymee/ration-frontend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
