kuber/frontend/frontend-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: ration-frontend-service
spec:
  selector:
    app: ration-frontend
  ports:
    - port: 5173
      targetPort: 5173
  type: ClusterIP
