kuber/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rationtrack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ration-frontend-service
                port:
                  number: 80
